# mcplex

./: .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  QUICKSTART.md  README.md  bridge.mjs  docker-compose.yml  mcplex.toml
.github/workflows/: ci.yml  release.yml
banner/: banner.html  build_banner.py
demo/: demo.toml  exercise.py  mock_server.py
examples/: README.md  dev-team.toml  minimal.toml  production.toml
src/: config.rs  main.rs
src/observe/: agentlens_bridge.rs  dashboard.rs  export.rs  metrics.rs  mod.rs
src/protocol/: cache.rs  mod.rs  multiplexer.rs  stdio.rs  transport.rs
src/router/: keyword.rs  mod.rs  semantic.rs
src/security/: allowlist.rs  audit.rs  mod.rs  rbac.rs
